# Vision-OPD

./: README.md  pyproject.toml
chat_templates/: perception_chat_template_qwen35.jinja
eval/: cal_acc.py  infer.py  judge_qwenlm.py  prepare_data.py  run_eval.sh
scripts/: merge_checkpoint.sh  prepare_data.py  run_vision_opd.sh
verl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
verl/experimental/agent_loop/: agent_loop.py  single_turn_agent_loop.py
verl/model_merger/: base_model_merger.py
verl/models/transformers/: monkey_patch.py  qwen3_5.py
verl/trainer/: main_ppo.py
verl/trainer/config/: opsd.yaml  user.yaml  vopd.yaml
verl/trainer/config/actor/: actor.yaml
verl/trainer/config/model/: hf_model.yaml
verl/trainer/ppo/: core_algos.py  metric_utils.py  ray_trainer.py
verl/utils/: chat_template.py  flops_counter.py  fsdp_utils.py  model.py  tokenizer.py  transformers_compat.py
verl/utils/dataset/: rl_dataset.py  vision_utils.py
verl/utils/metric/: utils.py
verl/utils/reward_score/: __init__.py  zoom_bench.py
verl/workers/: fsdp_workers.py  megatron_workers.py
verl/workers/actor/: dp_actor.py
verl/workers/config/: actor.py  model.py  rollout.py
verl/workers/rollout/: schemas.py
verl/workers/rollout/vllm_rollout/: vllm_async_server.py  vllm_rollout.py
