# -------------------------------
# build-system
# -------------------------------
[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

# -------------------------------
# project (PEP 621 metadata)
# -------------------------------
[project]
name = "verl"
dynamic = ["version"]

description = "Vision-OPD: Learning to See Fine Details for Multimodal LLMs via On-Policy Self-Distillation"
license = {text = "Apache-2.0"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"

dependencies = [
    "accelerate==1.12.0",
    "codetiming==1.4.0",
    "datasets==4.4.2",
    "dill==0.4.0",
    "einops==0.8.2",
    "huggingface-hub",
    "hydra-core==1.3.2",
    "liger-kernel==0.7.0",
    "mathruler==0.1.0",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "peft==0.18.0",
    "pillow==12.0.0",
    "psutil==7.1.3",
    "pyarrow==22.0.0",
    "pybind11==3.0.1",
    "qwen-vl-utils==0.0.14",
    "ray[default]==2.53.0",
    "safetensors==0.7.0",
    "tensorboard==2.20.0",
    "tensordict==0.10.0",
    "tokenizers==0.22.2",
    "torch==2.10.0",
    "torchdata==0.11.0",
    "torchvision==0.25.0",
    "vllm==0.18.0",
]

# -------------------------------
# tool.ruff - Linting configuration
# -------------------------------
[tool.ruff]
line-length = 120
exclude = ["scripts/legacy_model_merger.py"]

[tool.ruff.lint]
isort = {known-first-party = ["verl"]}
select = [
    "E",
    "F",
    "UP",
    "B",
    "I",
    "G",
]
ignore = [
    "F405", "F403",
    "E731",
    "B007",
    "UP032",
    "G004",
    "UP045",
    "UP035",
]

# -------------------------------
# tool.mypy - typechecking config
# -------------------------------
[tool.mypy]
pretty            = true
ignore_missing_imports = true
explicit_package_bases = true
follow_imports = "skip"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
"verl.trainer.config.algorithm",
"verl.trainer.ppo.core_algos",
"verl.trainer.ppo.reward",
"verl.workers.reward_manager",
"verl.workers.reward_manager.*",
]
ignore_errors = false

# -------------------------------
# tool.setuptools - Additional config
# -------------------------------
[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {file = "verl/version/version"}

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
verl = [
  "version/*",
  "trainer/config/*.yaml",
  "trainer/config/*/*.yaml",
]
